2016-11-19  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (shutdownOgre): moved here from destructor.
	* src/client/GameEngine.cpp (initialiseOgre): new protected function
	handles Ogre initialisation.
	* src/client/GameEngine.cpp (reconfigure): start to use StateSaver
	on current game state.

	* src/client/main.cpp (main): beter exception message handling.
	* src/client/GameEngine.cpp (~GameEngine): better cleanup process.
	* src/client/main.cpp (main): handle the restarting game engine.

	* src/client/GameEngine.cpp (restarting): new getter for mRestart.
	* src/client/GameEngine.cpp (keyPressed): set mToFullscreen to
	!mWindow->isFullscreen().
	* src/client/GameEngine.hpp (mToFullscreen): set next fullscreen
	status.

	* src/client/GameEngine.cpp (keyPressed): set mRestart to true
	when Alt+Enter pressed.
	* src/client/GameEngine.hpp (mRestart): add new boolean member;

2016-11-18  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (keyPressed): simple log on the Alt +
	Enter event.

	* src/client/EmptyGameState.hpp: created becaused used in two
	test files.

	* src/client/MainMenu.cpp  (save/restore): empty override of pure
	virtual functions.
	* src/client/GameState.hpp (save/restore): add two pure virtual
	functions.

	* src/client/StateSaver.cpp (save): implement save/restore function
	for CEGUI::Window type.


2016-11-17  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/StateSaver_Test.cpp (urect_eq): two more tests on
	URect save/restore.
	* src/client/StateSaver.cpp (save): implement save/restore function
	for CEGUI::Urect type.

	* src/client/StateSaver_Test.cpp (udim_eq): two more tests on
	UDim save/restore.
	* src/client/StateSaver.cpp (save): add save/restore functions to
	easily handle CEGUI::UDim types.
	* src/client/StateSaver.hpp (subkey): helper function for easily
	create subkey names.

2016-11-16  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/Exception_Test.cpp (three_param): some exception